Add underline to hover

--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@
                 <p>login states, FEB 2017. ui design / ux design </p>
             </div>
             <div class="row">
-                <img src="images/work/ymal-poster.png" alt="casino poster">
-                <p>digital art show, FEB 2017. art direction / graphic design / photography / animation </p>
+                <a target="_blank" href="https://vimeo.com/205719987">
+                    <img src="images/work/ymal-poster.png" alt="casino poster">
+                    <p>digital art show, FEB 2017. art direction / graphic design / photography / animation </p>
+                </a>
             </div>
             <div class="row">
                 <a target="_blank" href="http://www.hacksomecrap.com">
