--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
         </div>
         <div class="tldr-container">
             <p class="tldr">
-                I’m a designer and artist working and studying in Victoria, BC. I’m currently finishing the last
-                year of my Computer Science and Visual Arts degree at the University of Victoria.
+                I’m a designer and artist currently living in Canada. Right now I'm finishing
+                my last semester of University and will be graduating with a BSc in Computer
+                Science and Visual Arts.
             </p>
         </div>
         <div class="work-container">
