Add footer message

--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
                 <p>still life photo series, OCT 2016. film photography / art direction </p>
             </div>
         </div>
+        <div class="tldr-container">
+            <p class="tldr">
+                I'm currently available for work and projects. Shoot me an email at <a class="link-underline" href="#">kelseylegault@gmail.com ✉️</a>
+            </p>
+        </div>
         <footer>
             <div class="footer-text-container">
                 <a class="footer-mailto">2016 - ??</a>
