--- a/index.html
+++ b/index.html
@@ -118,9 +118,8 @@
         </div>
         <div class="tldr-container">
             <p class="tldr">
-                I’m a designer and artist currently living in Canada. Right now I'm finishing
-                my last semester of University and will be graduating with a BSc in Computer
-                Science and Visual Arts.
+                I’m a multidisciplinary designer living in Canada, working and studying in
+                Victoria, BC. This April I'll be graduating with a BSc in Computer Science and Visual Arts.
             </p>
         </div>
         <div class="work-container">
