--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <title>~</title>
 
     <!-- Facebook Meta Properties -->
-    <meta property="og:image" content="http://kelseylegault.com/images/metaimage.jpg">
+    <meta property="og:image" content="http://kelseylegault.com/images/meta-image.png">
     <meta property="og:title" content="Kelsey Legault">
     <meta property="og:site_name" content="Kelsey Legault"/>
-    <meta property="og:description" content="I am a designer living in Victoria, BC">
+    <meta property="og:description" content="A multidisciplinary designer living in Canada, working and studying in
+    Victoria, BC.">
     <meta property="og:url" content="http://kelseylegault.com" />
 
     <!-- Generic Meta Properties -->
