--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         </div>
         <div class="tldr-container">
             <p class="tldr">
-                I’m a multidisciplinary designer living in Canada, working and studying in
-                Victoria, BC. This April I'll be graduating with a BSc in Computer Science and Visual Arts.
+                I’m a multidisciplinary designer living in Canada, working and studying on Vancouver Island.
+                This April I'll be graduating with a BSc in Computer Science and Visual Arts.
             </p>
         </div>
         <div class="work-container">
@@ -166,7 +166,7 @@
         <footer>
             <div class="tldr-container">
                 <p class="tldr">
-                    I'm currently available for work and projects. Shoot me an email at <a class="link-underline" href="#">kelseylegault@gmail.com ✉️</a>
+                    Have some cool projects/ideas/thoughts? Shoot me an email at <a class="link-underline" href="#">kelseylegault@gmail.com ✉️</a>
                 </p>
             </div>
             <div class="footer-text-container">
