--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="row">
                 <a target="_blank" href="https://vimeo.com/205720177">
                     <img src="images/work/still.jpg" alt="still from not-so-still life">
-                    <p>video installation, FEB 2017. videography / art direction / set design </p>
+                    <p>video installation, FEB 2017. videography / art direction </p>
                 </a>
             </div>
             <div class="row">
