--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         </div>
         <div class="tldr-container">
             <p class="tldr">
-                I’m a multidisciplinary designer living in Canada, working and studying on Vancouver Island.
-                This April I'll be graduating with a BSc in Computer Science and Visual Arts.
+                I’m a multidisciplinary designer living in Canada, living and working in Victoria, BC.
+                This April I graduated with a BSc in Computer Science and Visual Arts.
             </p>
         </div>
         <div class="work-container">
