--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
         </div>
         <div class="tldr-container">
             <p class="tldr">
-                I’m a multidisciplinary designer and artist living in Canada. I'm currently living and working in Victoria, BC.
-                I just graduated with a BSc in Computer Science and Visual Arts at the University of Victoria.
+                I’m a Canadian multidisciplinary designer and artist. I
+                just graduated with a BSc in Computer Science and Visual Arts.
+                I'm currently working remotely in Victoria, BC.
+
             </p>
         </div>
         <div class="work-container">
