--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
             </p>
         </div>
-        <div class="work-container">
+        <!-- <div class="work-container">
             <div class="row">
                 <img src="images/work/casino-poster.png" alt="casino poster">
                 <p>casino pop-up art series, NOV 2016. graphic design </p>
@@ -164,7 +164,7 @@
                 <img src="images/work/photo-fruit.png" alt="still life photo series">
                 <p>still life photo series, OCT 2016. film photography / art direction </p>
             </div>
-        </div>
+        </div> -->
         <footer>
             <div class="tldr-container">
                 <p class="tldr">
