--- a/index.html
+++ b/index.html
@@ -119,12 +119,11 @@
         </div>
         <div class="tldr-container">
             <p class="tldr">
-                I’m a Canadian multidisciplinary designer and artist. I
-                just graduated with a BSc in Computer Science and Visual Arts.
-                I'm currently working remotely in Victoria, BC.
+                I’m a Canadian designer and artist living in Victoria, BC. A couple months ago I graduated with a BSc in Computer Science and Visual Arts from the University of Victoria. <br>
+                Currently I'm doing design for <a class="link-underline" target="_blank" href="https://bandcamp.com/">Bandcamp</a> 🎶, a place for music lovers to directly support music makers.
                 <br>
                 <br>
-                Have some cool projects/ideas/thoughts? Shoot me an email at <a class="link-underline" href="#">kelseylegault@gmail.com ✉️</a>
+                Have some cool projects/ideas/thoughts? Shoot me an email at ✉️<a class="link-underline" href="#">kelseylegault@gmail.com</a>
             </p>
         </div>
         <!-- <div class="work-container">
