--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="header-left">
                     <a class="link-underline" target="_blank" href="mailto:kelseylegault@gmail.com">kelseylegault@gmail.com</a>
                 </div>
-                <a class="volume-button link-underline"><span>sssshhh (mute)</span><span style="display:none">play some tunes</span></a>
+                <a class="volume-button link-underline"><span style="display:none">sssshhh (mute)</span><span>play some tunes</span></a>
             </header>
             <h1>Kelsey Legault</h1>
             <div class="square-container">
