--- a/index.html
+++ b/index.html
@@ -119,10 +119,7 @@
         </div>
         <div class="tldr-container">
             <p class="tldr">
-                I’m a Canadian designer and artist living in Victoria, BC. Last year I graduated with a BSc in Computer Science and Visual Arts from the University of Victoria.
-                <br>
-                <br>
-                Currently I'm doing design for <a class="link-underline" target="_blank" href="https://bandcamp.com/">Bandcamp</a> 🎶, a place for music lovers to directly support music makers.
+                I’m a Canadian designer and artist living in Victoria, BC. Currently I'm doing design for <a class="link-underline" target="_blank" href="https://bandcamp.com/">Bandcamp</a> 🎶, a place for music lovers to directly support music makers.
                 <br>
                 <br>
                 Have some cool projects/ideas/thoughts? Shoot me an email at <a class="link-underline" href="#">kelseylegault@gmail.com</a> ✉️.
@@ -170,7 +167,7 @@
         </div> -->
         <footer>
             <div class="footer-text-container">
-                <a class="footer-mailto">2016 - ??</a>
+                <a class="footer-mailto">2018 - ??</a>
                 <ul class="link-underline-list ">
                     <li><a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram<i>&nbsp;</i></a></li>
                     <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i>&nbsp;</i></a></li>
@@ -181,7 +178,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
