update social links

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         <div class="tldr-container">
             <p class="tldr">
-                I’m a Canadian designer and artist living in Victoria, BC. Currently I'm doing design for <a class="link-underline" target="_blank" href="https://bandcamp.com/">Bandcamp</a> 🎶, a place for music lovers to directly support music makers.
+                I’m a Canadian designer and artist living in Victoria, BC. Currently I'm doing design for <a class="link-underline" target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers. 🎶
                 <br>
                 <br>
                 Have some cool projects/ideas/thoughts? Shoot me an email at <a class="link-underline" href="#">kelseylegault@gmail.com</a> ✉️.
@@ -170,8 +170,7 @@
                 <a class="footer-mailto">2018 - ??</a>
                 <ul class="link-underline-list ">
                     <li><a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram<i>&nbsp;</i></a></li>
-                    <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i>&nbsp;</i></a></li>
-                    <li><a target="_blank" href="https://github.com/kelseyll">github<i>&nbsp;</i></a></li>
+                    <li><a target="_blank" href="https://www.bandcamp.com/kelseylegault/">collection <i>&nbsp;</i></a></li>
                 </ul>
             </div>
         </footer>
