Prep for update

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>~</title>
+    <title>Kelsey Legault</title>
 
     <!-- Facebook Meta Properties -->
-    <meta property="og:image" content="http://kelseylegault.com/images/meta-image.png">
+    <meta property="og:image" content="http://kelseylegault.com/images/meta.png">
     <meta property="og:title" content="Kelsey Legault">
     <meta property="og:site_name" content="Kelsey Legault"/>
-    <meta property="og:description" content="A multidisciplinary designer living in Canada, working and studying in
+    <meta property="og:description" content="A multidisciplinary designer living in Canada, working in
     Victoria, BC.">
     <meta property="og:url" content="http://kelseylegault.com" />
 
@@ -44,140 +44,31 @@
     </script>
 </head>
 <body>
-    <div class="outer-container">
-        <!-- <div class="hero-left-rectangle"></div> -->
-        <div class="hero-container">
-            <header>
-                <div class="header-left">
-                    <a class="link-underline" target="_blank" href="mailto:kelseylegault@gmail.com">kelseylegault@gmail.com</a>
-                </div>
-                <a class="volume-button link-underline"><span style="display:none">sssshhh (mute)</span><span>play some tunes</span></a>
-            </header>
-            <h1>Kelsey Legault</h1>
-            <div class="square-container">
-                <div class="square-container-list">
-                    <div class="drag">
-                        <div class="skillzsqaure">
-                            <img class="" src="images/skillzcard.svg" alt="skillz">
-                        </div>
-                    </div>
-                </div>
-                <div class="square-container-list-mobile">
-                    <div class="drag">
-                        <div class="skillzsqaure-mobile">
-                            <img class="" src="images/skillzcard-mobile.svg" alt="skillz">
-                        </div>
-                    </div>
-                </div>
-                <div class="square-container-computer">
-                    <div class="drag">
-                        <img class="computersquare" src="images/computersquare.png" alt="computer">
-                    </div>
-                </div>
-                <div class="square-container-computer-mobile">
-                    <div class="drag">
-                        <img class="computersquare-mobile" src="images/computersquare-mobile.png" alt="computer">
-                    </div>
-                </div>
-                <div class="square-container-fern">
-                    <div class="drag">
-                        <img class="fernsquare" src="images/fernsquare.png" alt="fern">
-                    </div>
-                </div>
-                <div class="square-container-fern-mobile">
-                    <div class="drag">
-                        <img class="fernsquare-mobile" src="images/fernsquare-mobile.png" alt="fern">
-                    </div>
-                </div>
-                <div class="square-container-flamingo">
-                    <div class="drag">
-                        <img class="flamingosquare" src="images/flamingosquare.png" alt="flamingo">
-                    </div>
-                </div>
-                <div class="square-container-tv">
-                    <div class="drag">
-                        <img class="tvsquare" src="images/tvsquare.png" alt="tv">
-                    </div>
-                </div>
-                <div class="square-container-palmtree">
-                    <div class="drag">
-                        <img class="palmtreesquare" src="images/palmtreesquare.png" alt="palmtree">
-                    </div>
-                </div>
-                <div class="square-container-dolphin">
-                    <div class="drag">
-                        <img class="dolphinsquare" src="images/dolphinsquare.png" alt="dolphin">
-                    </div>
-                </div>
-            </div>
-            <div class="fake-square"></div>
-            <figure>
-                <div class="arrow-image-holder">
-                    <img class="arrow-image" src="images/arrow-down.svg" alt="">
-                </div>
-            </figure>
-        </div>
-        <div class="tldr-container">
-            <p class="tldr">
-                I’m a Canadian designer and artist living in Victoria, BC. Currently I'm doing design for <a class="link-underline" target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers. 🎶
-                <br>
-                <br>
-                Have some cool projects/ideas/thoughts? Shoot me an email at <a class="link-underline" href="#">kelseylegault@gmail.com</a> ✉️.
-            </p>
-        </div>
-        <!-- <div class="work-container">
-            <div class="row">
-                <img src="images/work/casino-poster.png" alt="casino poster">
-                <p>casino pop-up art series, NOV 2016. graphic design </p>
-            </div>
-            <div class="row">
-                <a target="_blank" href="https://vimeo.com/205720177">
-                    <img src="images/work/still.jpg" alt="still from not-so-still life">
-                    <p>video installation, FEB 2017. videography / art direction </p>
-                </a>
-            </div>
-            <div class="row">
-                <img src="images/work/swu-login.svg" alt="sendwithus login modals">
-                <p>login states, FEB 2017. ui design / ux design </p>
-            </div>
-            <div class="row">
-                <a target="_blank" href="https://vimeo.com/205719987">
-                    <img src="images/work/ymal-poster.png" alt="casino poster">
-                    <p>digital art show, FEB 2017. art direction / graphic design / photography / animation </p>
-                </a>
-            </div>
-            <div class="row">
-                <a target="_blank" href="http://www.hacksomecrap.com">
-                    <img src="images/work/hacksmoecrap.png" alt="still life photo series">
-                    <p>hacksomecrap website, AUG 2016. ui design / front-end dev</p>
-                </a>
-            </div>
-            <div class="row">
-                <img src="images/work/logo-exploration.svg" alt="still life photo series">
-                <p>logo design, JAN 2017. branding / graphic design / illustration</p>
-            </div>
-            <div class="row">
-                <img src="images/work/flow.svg" alt="still life photo series">
-                <p>flow landing page, AUG 2015. ui design / ux design </p>
-            </div>
-            <div class="row">
-                <img src="images/work/photo-fruit.png" alt="still life photo series">
-                <p>still life photo series, OCT 2016. film photography / art direction </p>
-            </div>
-        </div> -->
-        <footer>
-            <div class="footer-text-container">
-                <a class="footer-mailto">2018 - ??</a>
-                <ul class="link-underline-list ">
-                    <li><a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram<i>&nbsp;</i></a></li>
-                    <li><a target="_blank" href="https://www.bandcamp.com/kelseylegault/">collection <i>&nbsp;</i></a></li>
-                </ul>
-            </div>
-        </footer>
+    <div class="tldr-container">
+        <p class="tldr">
+            I’m a Canadian designer living on Vancouver Island. Currently I work at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
+            <br>
+            <br>
+            Previously, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://www.launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.  
+            <br>
+            <br>
+            You can often find me at <a target="_blank" href="https://getworking.studio/">Working Studio</a>, a small coworking space in Victoria that I helped start with some pals.
+            <br>
+            <br>
+            Questions/ideas/thoughts? Send me an email at <a href="#">kelseylegault@gmail.com</a>.
+            <br>
+            <br>
+            <a class="volume-button" alt="tunes" title="tunes"><span style="display:none">🙉</span><span>🎶</span></a></li>
+            <span class="drag emoji" alt="move" title="grooves">🕺</span>
+            <br>
+            <br>
+            <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp collection</a> · <a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram</a>
+        </p>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-    <script src="js/main.js"></script>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
