--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <br>
             <br>
             <a class="volume-button" alt="tunes" title="tunes"><span style="display:none">🙉</span><span>🎶</span></a></li>
-            <span class="drag emoji" alt="move" title="grooves">🕺</span>
+            <span class="drag emoji" alt="move" title="grooves">🙃</span>
             <br>
             <br>
             <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp collection</a> · <a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram</a>
