--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
     <div class="tldr-container">
         <p class="tldr">
-            I’m a Canadian designer and I live on Vancouver Island. Currently I work at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
+            I’m a Canadian designer based on Vancouver Island. Currently I work at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
             <br>
             <br>
             Previously, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://www.launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.  
