--- a/index.html
+++ b/index.html
@@ -45,23 +45,38 @@
 <body>
     <div class="tldr-container">
         <p class="tldr">
-            I’m a Canadian designer based on Vancouver Island. Currently I work at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
+            <br>
+            <br>
+            <br>
+            <br>
+            I’m a Canadian designer based in Victoria, BC. Currently I work at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
             <br>
             <br>
             Previously, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://www.launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.  
             <br>
             <br>
-            You can often find me at <a target="_blank" href="https://getworking.studio/">Working Studio</a>, a small coworking space in Victoria that I helped start with some pals.
+            Pre-pandemic, you could often find me at <a target="_blank" href="https://getworking.studio/">Working Studio</a>, a small coworking space in Victoria that I helped start with some pals.
             <br>
             <br>
-            Questions/ideas/thoughts? Send me an email at <a href="#">kelseylegault@gmail.com</a>.
-            <br>
-            <br>
-            <a class="volume-button" alt="tunes" title="tunes"><span style="display:none">🙉</span><span>🎶</span></a></li>
-            <span class="drag emoji" alt="move" title="grooves">🙃</span>
-            <br>
-            <br>
-            <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp collection</a> · <a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram</a>
+            <!-- <a class="volume-button" alt="tunes" title="tunes">
+                <span style="display:none">stop the music</span>
+                <span>play some music</span>
+            </a> -->
+            <a href="#">kelseylegault@gmail.com</a> · <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp collection</a> · <a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram</a>
         </p>
     </div>
 </div>
