Update instagram link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <span style="display:none">stop the music</span>
                 <span>play some music</span>
             </a> -->
-            <a href="#">kelseylegault@gmail.com</a> · <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp collection</a> · <a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram</a>
+            <a href="#">kelseylegault@gmail.com</a> · <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp collection</a> · <a target="_blank" href="https://www.instagram.com/kelseylegault/">instagram</a>
         </p>
     </div>
 </div>
