--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             Previously, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://www.launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.  
             <br>
             <br>
-            Pre-pandemic, you could often find me at <a target="_blank" href="https://getworking.studio/">Working Studio</a>, a small coworking space in Victoria that I helped start with some friends.
+            Pre-pandemic, you could often find me at <a target="_blank" href="https://www.instagram.com/working.studio/">Working Studio</a>, a small coworking space in Victoria that I helped start with some friends.
             <br>
             <br>
             <!-- <a class="volume-button" alt="tunes" title="tunes">
