--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <br>
             <br>
             <br>
-            I’m a Canadian designer based in Victoria, BC. Currently I work at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
+            I’m a brand and product designer. Right now I'm working at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
             <br>
             <br>
             Previously, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://www.launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.  
@@ -72,11 +72,14 @@
             Pre-pandemic, you could often find me at <a target="_blank" href="https://www.instagram.com/working.studio/">Working Studio</a>, a small coworking space in Victoria that I helped start with some friends.
             <br>
             <br>
+            I live and work on the unceded and traditional land of the lək̓ʷəŋən People, known today as the Esquimalt and Songhees Nations.
+            <br>
+            <br>
             <!-- <a class="volume-button" alt="tunes" title="tunes">
                 <span style="display:none">stop the music</span>
                 <span>play some music</span>
             </a> -->
-            <a href="#">kelseylegault@gmail.com</a> · <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp</a> · <a target="_blank" href="https://www.instagram.com/kelseylegault/">instagram</a> · <a target="_blank" href="https://www.are.na/kelsey-legault">are.na</a>
+            <a href="#">email</a> · <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp</a> · <a target="_blank" href="https://www.instagram.com/kelseylegault/">instagram</a> · <a target="_blank" href="https://www.are.na/kelsey-legault">are.na</a>
         </p>
     </div>
 </div>
