--- a/index.html
+++ b/index.html
@@ -63,16 +63,13 @@
             <br>
             <br>
             <br>
-            I’m a brand and product designer. Right now I'm working at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
+            I'm a brand and product design based on the unceded and traditional land of the lək̓ʷəŋən People (Victoria, BC). Right now I'm working at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
             <br>
             <br>
             Previously, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://www.launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.  
             <br>
             <br>
             Pre-pandemic, you could often find me at <a target="_blank" href="https://www.instagram.com/working.studio/">Working Studio</a>, a small coworking space in Victoria that I helped start with some friends.
-            <br>
-            <br>
-            I live and work on the unceded and traditional land of the lək̓ʷəŋən People, known today as the Esquimalt and Songhees Nations.
             <br>
             <br>
             <!-- <a class="volume-button" alt="tunes" title="tunes">
