--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <!-- Generic Meta Properties -->
     <meta charset="UTF-8">
-    <meta name="description" content="I am a designer living in Victoria, BC">
-    <meta name="keywords" content="Portfolio, Designer, Design, Kelsey Legault">
+    <meta name="description" content="I'm a brand and product designer based on the unceded and traditional land of the lək̓ʷəŋən People (Victoria, BC).">
+    <meta name="keywords" content="Portfolio, Designer, Brand, Product, Design, Kelsey Legault">
     <meta name="author" content="Kelsey Legault">
 
     <!-- Favicon -->
@@ -63,10 +63,10 @@
             <br>
             <br>
             <br>
-            I'm a brand and product design based on the unceded and traditional land of the lək̓ʷəŋən People (Victoria, BC). Right now I'm working at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
+            I'm a brand and product designer based on the unceded and traditional land of the lək̓ʷəŋən People, known today as the Esquimalt and Songhees Nations (Victoria, BC). I'm currently working at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
             <br>
             <br>
-            Previously, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://www.launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.  
+            Previously, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://www.launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.
             <br>
             <br>
             Pre-pandemic, you could often find me at <a target="_blank" href="https://www.instagram.com/working.studio/">Working Studio</a>, a small coworking space in Victoria that I helped start with some friends.
