--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <br>
             <br>
             <br>
-            I'm a brand and product designer based on the unceded and traditional land of the lək̓ʷəŋən People, known today as the Esquimalt and Songhees Nations (Victoria, BC). I'm currently working at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place for music lovers to directly support music makers.
+            I'm a brand and product designer based on the unceded and traditional land of the lək̓ʷəŋən People (Victoria, BC). I'm currently working at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place where music lovers directly (and ethically) support music makers.
             <br>
             <br>
             Previously, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://www.launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.
