--- a/index.html
+++ b/index.html
@@ -45,39 +45,12 @@
 <body>
     <div class="tldr-container">
         <p class="tldr">
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <span class="drag emoji" alt="move" title="grooves" style="opacity:0.3">☺</span>
-            <br>
-            <br>
-            <br>
-            <br>
-            I'm a brand and product designer based on the unceded and traditional land of the lək̓ʷəŋən People (Victoria, BC). I'm currently working at <a target="_blank" href="https://bandcamp.com/">Bandcamp</a>, a place where music lovers directly (and ethically) support music makers.
-            <br>
-            <br>
-            Previously, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://www.launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.
-            <br>
-            <br>
-            Pre-pandemic, you could often find me at <a target="_blank" href="https://www.instagram.com/working.studio/">Working Studio</a>, a small coworking space in Victoria that I helped start with some friends.
-            <br>
-            <br>
-            <!-- <a class="volume-button" alt="tunes" title="tunes">
-                <span style="display:none">stop the music</span>
-                <span>play some music</span>
-            </a> -->
-            <a href="#">email</a> · <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp</a> · <a target="_blank" href="https://www.instagram.com/kelseylegault/">instagram</a> · <a target="_blank" href="https://www.are.na/kelsey-legault">are.na</a>
+            Hi! I'm a brand and product designer based in Canada, currently working at <a target="_blank" href="https://scalar.com/">Scalar</a>, an open-source API company.
         </p>
+        <p class="tldr">
+            Previously, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.
+        </p>
+        <a href="#">email</a> · <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp</a> · <a target="_blank" href="https://www.instagram.com/kelseylegault/">instagram</a> · <a target="_blank" href="https://www.are.na/kelsey-legault">are.na</a>
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
