--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 <body>
     <div class="tldr-container">
         <p class="tldr">
-            Hi! I'm a brand and product designer based in Canada, currently working at <a target="_blank" href="https://scalar.com/">Scalar</a>, an open-source API company.
+            Hi! I'm a brand and product designer based in Canada. Right now I'm working at <a target="_blank" href="https://scalar.com/">Scalar</a>, an open-source API company.
         </p>
         <p class="tldr">
-            Previously, I worked for <a href="https://www.bandcamp.com/" target="_blank">Bandcamp</a> for seven years, and before that, a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.
+            Previously, I worked for <a href="https://www.bandcamp.com/" target="_blank">Bandcamp</a> for six years. Before that, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.
         </p>
         <a href="#">email</a> · <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp</a> · <a target="_blank" href="https://www.instagram.com/kelseylegault/">instagram</a> · <a target="_blank" href="https://www.are.na/kelsey-legault">are.na</a>
     </div>
