--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="tldr">
             Previously, I worked for <a href="https://www.bandcamp.com/" target="_blank">Bandcamp</a> for six years. Before that, I worked for a handful of <a href="https://www.getflow.com/" target="_blank">start</a><a href="https://launchaco.com/" target="_blank">ups</a> while completing a Bachelor’s of Science with a combined major of Visual Arts and Computer Science at the University of Victoria.
         </p>
-        <a href="#">email</a> · <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp</a> · <a target="_blank" href="https://www.instagram.com/kelseylegault/">instagram</a> · <a target="_blank" href="https://www.are.na/kelsey-legault">are.na</a>
+        <a target="_blank" href="https://www.bandcamp.com/kelseylegault/">bandcamp</a> · <a target="_blank" href="https://www.instagram.com/kelseylegault/">instagram</a> · <a target="_blank" href="https://www.are.na/kelsey-legault">are.na</a>
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
